the width is enlarged

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ img{
    z-index: 1;
    margin-bottom: 20px;
    padding: 15px 32px;
-   max-width: 460px;
+   width: 460px;
    border: 2px solid var(--color-txt);
    border-radius: 5px;
 }
